# QuantumWalletCreation

./: package-lock.json  package.json  pyproject.toml  readme  theme.json
cli/: quantum_random.py  quantum_wallet.py
client/src/: App.tsx
client/src/components/layout/: navbar.tsx
client/src/components/quantum-wallet/: chain-select.tsx  mnemonic-display.tsx  receive-modal.tsx  security-warning.tsx  wallet-form.tsx
client/src/lib/: api.ts
client/src/pages/: developer-auth.tsx  developer.tsx  home.tsx  login.tsx  profile.tsx
client/src/types/: api.ts
db/: schema.ts
extension/: background.js  manifest.json  popup.html  popup.js  styles.css
extension/services/: api.js
